+Improved heuristics for guessing file encoding when regular detection fails
+Jump to matching Brace/Bracket command (default Ctrl+Shift+B)
+Combinded Add/Delete bookmark into single toggle action
+Add Serbian translation (contributed by Vladimir Lazic)
+Improved api documentation
+Auto-(un)commenting support for Editra Style Sheets
+Fold Margin styling can be styled separate from rest of buffer

BUG FIXES:
+Misc UI consistancy issues
+Add missing Objective C sample file for highlighting editor
+Add missing ActionScript sample file for highlighting editor
+Using 16x16 size toolbar icons on OSX
+Missing editra.ico file on source installs under Windows
+Handle PyDeadObjectErrors that can happen when one of the network threads
started in the PluginManager returns after the manager has been closed.

#-----------------------------------------------------------------------------#

VERSION 0.2.90
DATE 03/15/2008
11th Alpha Release

NEWS:
  This release introduces a number of major new features and improvements 
throughout the editor. The biggest addition is the new bundled CodeBrowser 
plugin for browsing classes, functions, variables and other significant 
elements of a document. In this first release CodeBrowser has support for the 
filetypes (Ada, CSS, ini, batch, ESS, Fortran, Inno Setup Scripts, Lisp, Lua, 
NSIS, Perl, Php, Python, Shell Scripts, Tcl/Tk).

In addition to the CodeBrowser there are new updated versions many other 
plugins. Launch now has added support for (Ada, haXe, Php, and PostScript). 
The Projects plugin now has added support for using the Bazaar source control 
system in addition to some other minor feature additions. Another new version 
of FileBrowser is also shipped with Editra fixing some bugs from the previous 
release.

As of this release Editra has now also been localized into Dutch and Simplified 
Chinese, other translations have also been updated. For more details on other 
changes and improvements please view the changelog below.

