@@ -58,6 +58,7 @@ _DEFAULTS = {
            'GUIDES'     : False,            # Use Indentation guides
            'ICONS'      : 'Tango',          # Icon Theme
            'ICON_SZ'    : (24, 24),         # Toolbar Icon Size
+           'INDENTWIDTH': 4,                # Default indent width
            'KEY_PROFILE': None,             # Keybinding profile
            'LANG'       : 'Default',        # UI language
            'LASTCHECK'  : 0,                # Last time update check was done
