@@ -29,6 +29,7 @@ NEW: [features/improvements]
 +Improved api documentation
 +Auto-(un)commenting support for Editra Style Sheets
 +Fold Margin styling can be styled separate from rest of buffer
++Add option to set Indent Width separatly from Tab Width
 
 BUG FIXES:
 +Misc UI consistancy issues
@@ -38,6 +39,8 @@ BUG FIXES:
 +Missing editra.ico file on source installs under Windows
 +Handle PyDeadObjectErrors that can happen when one of the network threads
 started in the PluginManager returns after the manager has been closed.
++Fix bug in failing to convert file paths to unicode when opening from command
+line.
 
 #-----------------------------------------------------------------------------#
 
